--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body {
   font-family: Arial, sans-serif;
   background-color: #0b0f2b;
-  color: #E2725B;
+  color: #FF007F;
   padding: 20px;
 }
 
@@ -57,7 +57,8 @@ select,
 input[type="text"],
 button {
   background-color: #1a1f3a;
-  color: #E2725B;
+  color: #FF007F;
+;
   border: 1px solid #E2725B;
   padding: 6px;
 }
@@ -78,7 +79,8 @@ button:hover {
 
 .result-person {
   background-color: #1a1f3a;
-  border: 1px solid #E2725B;
+  border: 1px solid #FF007F;
+;
   border-radius: 10px;
   padding: 10px;
 }
@@ -89,7 +91,8 @@ button:hover {
   justify-content: space-between;
   align-items: center;
   background: #1a1f3a;
-  border: 1px solid #E2725B;
+  border: 1px solid #FF007F;
+;
   padding: 8px;
   border-radius: 10px;
 }
@@ -97,7 +100,8 @@ button:hover {
 #uploadedList {
   margin-top: 8px;
   background: #1a1f3a;
-  border: 1px solid #E2725B;
+  border: 1px solid #FF007F;
+;
   border-radius: 10px;
   padding: 8px;
 }
